--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -29,6 +29,18 @@ $background-opacity: 0.9;
     }
 }
 
+//Set text query
+
+@function set-text-color($color) {
+    @if(lightness($color) > 40) {
+        @return #000;
+    }
+
+    @else {
+        @return #fff;
+    }
+}
+
 
 //Media Query Mixins
 @mixin mediaSm {
