--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,5 @@
-@import 'config';
-@import 'menu';
-@import 'mobile';
+@import "config";
+@import "menu";
 
 * {
   box-sizing: border-box;
@@ -9,10 +8,10 @@
 body {
   @include background;
   background: $primary-color;
-  color: #fff;
+  color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5;
 }
 
@@ -25,7 +24,6 @@ h3 {
 
   &.lg-heading {
     font-size: 6rem;
-    margin-top: 7rem;
     margin-left: 3rem;
   }
 
@@ -54,7 +52,7 @@ header {
 main {
   padding: 4rem;
   //height: 100%;
-  min-height: calc(100vh - 60px);
+  min-height: calc(100vh - 60px); //makes the footer sticky
   color: #fff;
 
   .icons {
@@ -79,3 +77,57 @@ main {
     }
   }
 }
+
+//About Page
+
+.about-info {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-areas:
+    "bioimage bio bio"
+    "job1 job2 job3";
+  grid-template-columns: repeat(3, 1f);
+
+  .bio-image {
+    grid-area: bioimage;
+    margin: auto;
+    border-radius: 50%;
+    border: $secondary-color 3px solid;
+  }
+
+  .bio {
+    grid-area: bio;
+    font-size: 1.5rem;
+  }
+
+  .job-1 {
+    grid-area: job1;
+  }
+
+  .job-2 {
+    grid-area: job2;
+  }
+
+  .job-3 {
+    grid-area: job3;
+  }
+
+  .job {
+    background: lighten($primary-color, 5);
+    padding: 0.5rem;
+    border-bottom: $secondary-color 5px solid;
+  }
+}
+
+#main-footer {
+  text-align: center;
+  padding: 1rem;
+  background: darken($primary-color, 10);
+  color: set-text-color($primary-color);
+  height: 60px;
+}
+
+
+
+
+@import "mobile";
