--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,13 +24,12 @@ h3 {
 
   &.lg-heading {
     font-size: 6rem;
-    margin-left: 3rem;
   }
 
   &.sm-heading {
+    margin-bottom: 2rem;
     padding: 0.2rem 1rem;
     background: rgba(lighten($primary-color, 2), 0.5);
-    margin-left: 3rem;
   }
 }
 
@@ -48,6 +47,7 @@ header {
 .text-secondary {
   color: $secondary-color;
 }
+
 
 main {
   padding: 4rem;
@@ -118,6 +118,53 @@ main {
     border-bottom: $secondary-color 5px solid;
   }
 }
+
+//Work Page
+
+.projects {
+  display: grid;
+  grid-gap: 0.7rem;
+  grid-template-columns: repeat(3, 1fr);
+
+  img {
+    width: 100%;
+    border: 3px #fff solid;
+
+    &:hover {
+      opacity: 0.5;
+      border-color: $secondary-color;
+      @include easeOut;
+    }
+  }
+}
+
+//Button Styles
+
+.btn {
+  display: block;
+  padding: 0.5rem 1rem;
+  border: 0;
+  margin-bottom: 0.3rem;
+
+  &:hover {
+    background: $secondary-color;
+    color: set-text-color($secondary-color);
+  }
+}
+
+.btn-dark {
+  @extend .btn;
+  background: darken($primary-color, 50);
+  color: #fff;
+}
+
+.btn-light {
+  @extend .btn;
+  background: lighten($primary-color, 50);
+  color: #333;
+}
+
+
 
 #main-footer {
   text-align: center;
