--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,5 @@
-@import "config";
-@import "menu";
+@import 'config';
+@import 'menu';
 
 * {
   box-sizing: border-box;
@@ -11,7 +11,7 @@ body {
   color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5;
 }
 
@@ -48,16 +48,13 @@ header {
   color: $secondary-color;
 }
 
-
 main {
   padding: 4rem;
-  //height: 100%;
-  min-height: calc(100vh - 60px); //makes the footer sticky
-  color: #fff;
+  // height: 100%;
+  min-height: calc(100vh - 60px);
 
   .icons {
     margin-top: 1rem;
-    margin-left: 3rem;
 
     a {
       padding: 0.4rem;
@@ -78,15 +75,13 @@ main {
   }
 }
 
-//About Page
-
 .about-info {
   display: grid;
   grid-gap: 30px;
   grid-template-areas:
-    "bioimage bio bio"
-    "job1 job2 job3";
-  grid-template-columns: repeat(3, 1f);
+    'bioimage bio bio'
+    'job1 job2 job3';
+  grid-template-columns: repeat(3, 1fr);
 
   .bio-image {
     grid-area: bioimage;
@@ -137,8 +132,7 @@ main {
   }
 }
 
-
-//Contact Page
+// Contact Page
 .boxes {
   display: flex;
   flex-wrap: wrap;
@@ -165,10 +159,7 @@ main {
   }
 }
 
-
-
-//Button Styles
-
+// Button Styles
 .btn {
   display: block;
   padding: 0.5rem 1rem;
@@ -193,8 +184,6 @@ main {
   color: #333;
 }
 
-
-
 #main-footer {
   text-align: center;
   padding: 1rem;
@@ -203,7 +192,4 @@ main {
   height: 60px;
 }
 
-
-
-
-@import "mobile";
+@import 'mobile';
